优化 dns 解析 添加缓存