@@ -50,9 +50,9 @@ fi
 JAVA_MEM_OPTS=""
 BITS=`java -version 2>&1 | grep -i 64-bit`
 if [ -n "$BITS" ]; then
-  JAVA_MEM_OPTS=" -server -Xms256m -Xms256m -Xmn120m -XX:PermSize=128m -Xss256k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
+  JAVA_MEM_OPTS=" -server -Xms256m -Xms256m -Xmn120m -Xss256k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
 else
-  JAVA_MEM_OPTS=" -server -Xms256m -Xms256m -XX:PermSize=128m -XX:SurvivorRatio=2 -XX:+UseParallelGC "
+  JAVA_MEM_OPTS=" -server -Xms256m -Xms256m -XX:SurvivorRatio=2 -XX:+UseParallelGC "
 fi
 CONFIG_FILES=" -Dspring.config.location=$CONF_DIR/application.properties "
 echo -e "Starting the $SERVER_NAME ..."
